# Coach-Ari

./: .gitignore  README.md
personal_growth_coach/: README.md  pyproject.toml
personal_growth_coach/src/personal_growth_coach/: crew.py  main.py
personal_growth_coach/src/personal_growth_coach/config/: agents.yaml  tasks.yaml
